<resources>
    <string name="app_name">PRM392Project</string>
    <string name="home">Trang chủ</string>
    <string name="product">Sản phẩm</string>
    <string name="favorite">Yêu thích</string>
    <string name="setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand_describe">Thời trang nam</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBeYL-ONrwYI9VnvHM8UAKRrQ0viX-I66Y</string>
    <string name="title_login_form">Chào mừng đến với KaviorStoreKeyBroad \n Đăng nhập</string>
    <string name="title_register_form">Chào mừng đến với KaviorStoreKeyBroad \n Đăng kí</string>
    <string name="hint_username_login">Tên tài khoản</string>
    <string name="hint_password_login">Mật khẩu</string>
    <string name="content_des_chat">Đến tin nhắn</string>
    <string name="content_des_cart">Đến giỏ hàng</string>
    <string name="content_des_logo">Logo Coolmate</string>
    <string name="short_des_story"><b>KaviorStore sinh ra để làm gì?</b>\n\nPhải chia sẻ thật là rất nhiều người đặt câu hỏi này cho đội ngũ, nhưng gần đây…</string>
    <string name="short_des_story2"><b>Khách hàng là thượng đế?</b>\n\nĐối với KaviorStore chúng tôi sẽ phục vụ các bạn từ A-Z 24/7, chỉ cần gọi là chúng tôi có mặt</string>
    <string name="short_des_story3"><b>Nhân viên chính bên KaviorStore là ai?</b>\n\nCác thành viên cốt cán như Mai Phương Linh, Cấn Duy Khánh, Bùi Quang Trường, Lê Văn Đức</string>
    <string name="more">Xem thêm</string>
    <string name="des">Image Description</string>
    <string name="cart_fragment">"Giỏ hàng "</string>
    <string name="title_story">Câu chuyện</string>
    <string name="title_cus_service">Dịch vụ khách hàng</string>
    <string name="title_staff">Nhân viên</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is channel 1</string>
</resources>